syntax = "proto3";

package api.v1.user;

option go_package = "github.com/RyoJerryYu/protoc-gen-pluginx/tests/protoc-gen-go-fieldmask/e2e/proto/user";

import "google/protobuf/timestamp.proto";
import "ryojerryyu/annotations/annotations.proto";

message UserPassword {
    string id = 1;
    string password = 2;
    google.protobuf.Timestamp created_at = 3;
}